# wormhole

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_RU.md  vcpkg.json
.github/: coverage.yml  macos.yml  windows.yml
.github/workflows/: coverage.yml  linux.yml  macos.yml  static_analysis.yml  windows.yml
app/: CMakeLists.txt
app/wormhole/: CMakeLists.txt
app/wormhole/src/: main.cc
cmake/: FormatMessage.cmake  GenerateDependenciesGraph.cmake  MakeTarget.cmake  NestingFileSearch.cmake  ProjectSettings.cmake
components/: CMakeLists.txt
components/http_signal_client/: CMakeLists.txt
components/http_signal_client/include/wormhole/signal/: http.h
components/http_signal_client/src/: http.cc
components/http_signal_client/test/simple_test/: CMakeLists.txt  test.cc
components/sqlite/: CMakeLists.txt
components/sqlite/include/wormhole/sqlite/: sqlite.h
components/sqlite/src/: sqlite.cc
components/sqlite/test/simple_test/: CMakeLists.txt  test.cc
components/telegram_signal_client/: CMakeLists.txt
components/telegram_signal_client/include/wormhole/signal/: telegram.h
components/telegram_signal_client/src/: telegram.cc
components/telegram_signal_client/test/: CMakeLists.txt
components/telegram_signal_client/test/simple_test/: CMakeLists.txt  test.cc
components/ui/: CMakeLists.txt
components/ui/include/wormhole/ui/: ui.h
components/ui/src/: ui.cc
components/ui/test/simple_test/: CMakeLists.txt  test.cc
components/webrtc/: CMakeLists.txt
components/webrtc/include/wormhole/webrtc/: webrtc.h
components/webrtc/src/: webrtc.cc
components/webrtc/test/simple_test/: CMakeLists.txt  test.cc
core/: CMakeLists.txt
core/include/wormhole/: core.h
core/src/: core.cc
core/test/simple_test/: CMakeLists.txt  test.cc
doc/plantuml/: component_diagram.puml  container_diagram.puml  system_context.puml
example/: CMakeLists.txt
example/build_project/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/wormhole/: wormhole.h
lib/include/wormhole/internal/: wormhole_internal.h
lib/src/: wormhole.cc
lib/src/internal/: wormhole_internal.cc
os_specific/: CMakeLists.txt
os_specific/windows/: CMakeLists.txt
os_specific/windows/driver/: CMakeLists.txt
os_specific/windows/driver/include/wormhole_driver/: wormhole_driver.h
os_specific/windows/driver/src/: wormhole_driver.cc
os_specific/windows/driver/test/: CMakeLists.txt
os_specific/windows/driver/test/simple_test/: CMakeLists.txt  test.cc
test/: CMakeLists.txt
test/build_project/: CMakeLists.txt  main.cc
